--- a/scss/custom-styles.css
+++ b/scss/custom-styles.css
@@ -42,6 +42,7 @@ body {
 .hero-page {
   background-color: #f7f6f6;
   margin-top: 85px;
+  position: relative;
   height: 40%; }
   .hero-page .info-block {
     position: absolute;
